--- a/index.html
+++ b/index.html
@@ -16,6 +16,36 @@
 </style>
 </head>
 <body class="manrope-font">
-    
+    <!-- Main Content -->
+     <main class="max-w-screen-xl mx-auto px-16 px-28">
+      <!-- header section -->
+       <header class="flex pt-10 mb-20">
+        <!-- text section -->
+        <div>
+          <h1 class="text-5xl md:text-7xl font-extrabold text-[#1C1C1C]">
+            It's good <br> tea time at The <br> Tea House
+          </h1>
+          <p class="text-[#777] mt-7">
+            Tea and Botanical Solutions Supplier Give Optimum <br> Satisfaction To Your Taste Buds.
+          </p>
+          <br>
+          <button class="bg-gradient-to-r from-[#FF8938] to-[#F00] p-4 rounded-xl text-white font-bold">Explore More <i class="fa-solid fa-arrow-right -rotate-45 text-xl"></i></button>
+        </div>
+        <!-- image -->
+        <div class="relative">
+          <div>
+            <img class="w-full" src="images/banner.png" alt="">
+          </div>
+          <div class="absolute flex items-center bg-white shadow-lg px-2 py-2 lg:px-6 lg:py-6 rounded-lg top-20 md:top-80 md:left-32 lg:left-28">
+            <div><i class="fa-solid fa-star text-2xl text-amber-500"></i></div>
+          <div class="ml-2" >
+            <h3 class="text-2xl font-extrabold text-[#1C1C1C]">5.00</h3>
+            <p class="text-[#777]">Trust Pilot Ratings</p>
+          </div>
+          </div>
+        </div>
+       </header>
+
+     </main>
 </body>
 </html>
