--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Main Content -->
      <main class="max-w-screen-xl mx-auto px-16 px-28">
       <!-- header section -->
-       <header class="flex pt-10 mb-20">
+       <header class="lg:flex pt-10 mb-20">
         <!-- text section -->
         <div>
           <h1 class="text-5xl md:text-7xl font-extrabold text-[#1C1C1C]">
@@ -45,6 +45,40 @@
           </div>
         </div>
        </header>
+       <!-- Featured Products section -->
+       <section class="py-8 lg:py-20">
+        <div>
+          <h4 class="text-[#1C1C1C] text-2xl md:text-5xl font-extrabold text-center">Our Featured Products</h4>
+          <p class="text-[#777] font-medium text-center mt-5">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form,<br> by injected humour, or randomised words which don't look even slightly believable. </p>
+        </div>
+        <!-- Featured card -->
+         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 text-center mt-11">
+          <!-- card 1 -->
+           <div class="rounded-lg shadow-md bg-[#F4F4F4] overflow-hidden">
+            <img class="mx-auto pt-4" src="images/tea-1.png" alt="">
+            <h3 class="text-[#1C1C1C] text-center text-2xl font-extrabold mt-7">Milk Tea</h3>
+            <p class="text-[#777] text-center mb-5">Creamer could be replaced <br> by fresh milk</p>
+           </div>
+           <!-- card 2 -->
+           <div class="rounded-lg shadow-md bg-[#F4F4F4] overflow-hidden">
+            <img class="mx-auto pt-4" src="images/tea-2.png" alt="">
+            <h3 class="text-[#1C1C1C] text-center text-2xl font-extrabold mt-7">Black Tea</h3>
+            <p class="text-[#777] text-center mb-5">Creamer could be replaced <br> by fresh milk</p>
+           </div>
+           <!-- card 3 -->
+           <div class="rounded-lg shadow-md bg-[#F4F4F4] overflow-hidden">
+            <img class="mx-auto pt-4" src="images/tea-3.png" alt="">
+            <h3 class="text-[#1C1C1C] text-center text-2xl font-extrabold mt-7">Lemon Tea</h3>
+            <p class="text-[#777] text-center mb-5">Creamer could be replaced <br> by fresh milk</p>
+           </div>
+           <!-- card 4 -->
+           <div class="rounded-lg shadow-md bg-[#F4F4F4] overflow-hidden">
+            <img class="mx-auto pt-4" src="images/tea-4.png" alt="">
+            <h3 class="text-[#1C1C1C] text-center text-2xl font-extrabold mt-7">Green Tea</h3>
+            <p class="text-[#777] text-center mb-5">Creamer could be replaced <br> by fresh milk</p>
+           </div>
+         </div>
+       </section>
 
      </main>
 </body>
